--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,8 @@
 
 .title {
   font-size: 20px;
+  text-decoration: none;
+  color: var(--clr-neutral-100);
 }
 
 .theme-switcher {
@@ -35,6 +37,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 2rem;
   padding: 2rem 3rem;
 }
 
@@ -60,7 +64,8 @@
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, 265px);
+  justify-content: center;
   gap: 2rem;
   width: min(1440px, 100% - 3rem);
   margin: 0 auto;
@@ -73,6 +78,7 @@
   max-width: 265px;
   width: 100%;
   font-size: 0.875rem;
+  margin-top: 2rem;
 }
 
 .country:hover {
